--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
 	"name": "api",
 	"version": "1.0.0",
 	"description": "https://getstream.io/",
+	"main": "src/server.js",
 	"scripts": {
-		"start": "cd dist && node server.js",
-		"watch": "nodemon start",
-		"build": "./build.sh"
+		"start": "nodemon --exec babel-node src/server.js",
+		"build": "babel src --out-dir dist",
+		"serve": "node dist/server.js"
 	},
 	"author": [
 		{
@@ -14,10 +15,37 @@
 		}
 	],
 	"license": "BSD-3-Clause",
-	"keywords": ["API", "Express", "REST", "Mongoose", "MongoDB"],
+	"keywords": [
+		"API",
+		"Express",
+		"REST",
+		"Mongoose",
+		"MongoDB"
+	],
 	"dependencies": {
-		"babel": "^6.23.0",
-		"babel-cli": "^6.26.0",
-		"babel-preset-env": "^1.6.1"
+		"body-parser": "^1.18.3",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"dotenv": "^7.0.0",
+		"express": "^4.16.4",
+		"express-jwt": "^5.3.1",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.4.21",
+		"mongoose-bcrypt": "^1.6.0",
+		"mongoose-timestamp": "^0.6.0",
+		"validator": "^10.11.0"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.4.3",
+		"@babel/core": "^7.4.3",
+		"@babel/node": "^7.2.2",
+		"@babel/preset-env": "^7.4.3",
+		"express-winston": "^3.1.0",
+		"winston": "^3.2.1"
+	},
+	"babel": {
+		"presets": [
+			"@babel/preset-env"
+		]
 	}
 }
